html layout and styling v.1

--- a/index.html
+++ b/index.html
@@ -8,28 +8,100 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <!--4 buttons: Løn, Kønsfordeling, Jobstart, Arbejdsløshed-->
+    </nav>
     <header>
-        <nav>
-            
-        </nav>
+        <h1>Lorem Ipsum Dolor Sit Amet</h1>
+        <p id="introText">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quibusdam soluta doloremque id rem tempora delectus ratione nostrum harum reiciendis doloribus dolor porro, deleniti nesciunt dolorem est omnis accusantium culpa.
+        </p>
     </header>
-    <section id="heroSection">
+
+    <section id="salarySection" class="mainSections">
+        <h2>Løn</h2>
+
+        <section class="subSections">
+            <canvas id="salaryChart"></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
+    </section>
+
+    <section id="genderSection" class="mainSections">
+        <h2>Kønsfordeling</h2>
+
+        <section class="subSections">
+            <canvas id="genderChart1"></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui
+                    totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
+
+        <section class="subSections">
+            <canvas id="genderChart2"></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui
+                    totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
+
+        <section class="subSections">
+            <canvas id="genderChart3"></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui
+                    totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
 
     </section>
-    <section id="salarySection">
+
+    <section id="jobSection" class="mainSections">
+        <h2>Jobstart</h2>
+
+        <section class="subSections">
+            <canvas></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
 
     </section>
-    <section id="genderSection">
+
+    <section id="joblessSection" class="mainSections">
+        <h2>Arbejdsløshed</h2>
+
+        <section class="subSections">
+            <canvas></canvas>
+            <div>
+                <p class="sectionText">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
+                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                </p>
+            </div>
+        </section>
 
     </section>
-    <section id="jobSection">
 
-    </section>
-    <section id="joblessSection">
-
-    </section>
     <footer>
-
+        <p>EK.DK</p>
     </footer>
 </body>
 <!--Chart JS-->
