Udkast til introtekst

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Lorem Ipsum Dolor Sit Amet</h1>
         <p id="introText">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quibusdam soluta doloremque id rem tempora delectus ratione nostrum harum reiciendis doloribus dolor porro, deleniti nesciunt dolorem est omnis accusantium culpa.
+            Overvejer du at uddanne dig inden for it? Så er du det helt rette sted! På denne hjemmeside gennemgår vi nogle af de ting der kan være super fedt at vide om It-uddannelser inden studiestart. Vi håber at du med hjælp fra os, kan få lidt ro i maven og virkelig overveje at tilmælde dig til en af vores uddannelser.
         </p>
     </header>
 
