--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--4 buttons: Løn, Kønsfordeling, Jobstart, Arbejdsløshed-->
     </nav>
     <header>
-        <h1>Lorem Ipsum Dolor Sit Amet</h1>
+        <h1> <img src="uncle_sam.png" class="recruit"> </h1>
         <p id="introText">
             Overvejer du at uddanne dig inden for it? Så er du det helt rette sted! På denne hjemmeside gennemgår vi nogle af de ting der kan være super fedt at vide om It-uddannelser inden studiestart. Vi håber at du med hjælp fra os, kan få lidt ro i maven og virkelig overveje at tilmælde dig til en af vores uddannelser.
         </p>
