--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
     </main>
 
     <footer>
-        <a href="">Link til IT-faglige uddannelser på EK.DK</a>
+        <a href="https://www.ek.dk/videregaaende-uddannelser/it-og-multimedie" target="_blank" rel="noopener noreferrer">
+            Link til IT-faglige uddannelser på EK.DK
+        </a>
     </footer>
 </body>
 <!--Chart JS-->
