nav tweaks and SQL DDL script

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <footer>
         <a href="https://www.ek.dk/videregaaende-uddannelser/it-og-multimedie" target="_blank" rel="noopener noreferrer">
-            Link til IT-faglige uddannelser på EK.DK
+            Se IT-faglige uddannelser på EK.DK
         </a>
     </footer>
 </body>
