--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h2>Jobstart</h2>
     
             <section class="subSections">
-                <canvas></canvas>
+                <canvas id="jobChart1"></canvas>
                 <div>
                     <p class="sectionText">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
@@ -129,7 +129,7 @@
             <h2>Arbejdsløshed</h2>
     
             <section class="subSections">
-                <canvas></canvas>
+                <canvas id="jobChart2"></canvas>
                 <div>
                     <p class="sectionText">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
