--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 style="display: none;">Kvinder på IT-uddannelser</h1> <!--SEO fokuseret h1-->
             <img src="we_need_you.jpg" alt="A picture of a techy woman in a hoodie and smart glasses. Pointing at the user. Text on picture reads: We need you, to code the future">
             <p id="introText">
-                Overvejer du at uddanne dig inden for it? Så er du det helt rette sted! På denne hjemmeside gennemgår vi nogle af de ting der kan være super fedt at vide om It-uddannelser inden studiestart. Vi håber at du med hjælp fra os, kan få lidt ro i maven og virkelig overveje at tilmælde dig til en af vores uddannelser.
+                Overvejer du at uddanne dig inden for it? Så er du det helt rette sted! På denne hjemmeside gennemgår vi nogle af de ting der kan være super fedt at vide om It-uddannelser inden studiestart. Vi håber at du med hjælp fra os, kan få lidt ro i maven og virkelig overveje at tilmelde dig til en af vores uddannelser.
             </p>
         </header>
         
