--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <canvas id="salaryChart"></canvas>
                 <div>
                     <p class="sectionText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
-                        dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                        Et af de helt store spørgsmål nå man overvejer hvad man gerne vil ift uddannelse er løn.
+                        På diagrammet kan du se hvad de forskellige uddannelser ca. udbetaler som minimum, maksimum og gennemsnitlig løn.
                     </p>
                 </div>
             </section>
@@ -81,9 +81,9 @@
                 <canvas id="genderChart1"></canvas>
                 <div>
                     <p class="sectionText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui
-                        totam
-                        dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                        Det kommer ikke som en stor overraskelse at de fleste it-uddannelser er mandsdommineret,
+                        me der er ikke så "slemt" som du måske går og tror. Målet er selvfølgelig at komme så tæt på en 50/50
+                        kønsfordeling som muligt, og med din hjælp kan vi komme tættere på målet!
                     </p>
                 </div>
             </section>
@@ -92,9 +92,7 @@
                 <canvas id="genderChart2"></canvas>
                 <div>
                     <p class="sectionText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui
-                        totam
-                        dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                        En af
                     </p>
                 </div>
             </section>
