--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <canvas id="genderChart2"></canvas>
                 <div>
                     <p class="sectionText">
-                        En af
+                        Lorem ipsum
                     </p>
                 </div>
             </section>
@@ -116,8 +116,8 @@
                 <canvas id="jobChart1"></canvas>
                 <div>
                     <p class="sectionText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
-                        dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                        En af de helt store skridt efter du har færdiggjordt din uddannelse, er at komme ud på arbejdsmarkedet.
+                        Her kan du se hvordan nyuddannede inde for branchen typisk finder deres første job.
                     </p>
                 </div>
             </section>
@@ -130,8 +130,9 @@
                 <canvas id="jobChart2"></canvas>
                 <div>
                     <p class="sectionText">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid enim et! Qui totam
-                        dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
+                       En af de ting vi ved godt kan nage en smule er tanken "hvad nu hvis jeg ikke finder et job?".
+                       Men du behøver ikke at være så bekymret! Arbejdsløsheden inde for disse uddannelser ligger helt nede mellem 1-5%
+                       for uddannselserne.
                     </p>
                 </div>
             </section>
