New SQL, local 3P data updated

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
 <script src="https://unpkg.com/mingo/dist/mingo.min.js"></script>
 <!--Local EKDataset-->
 <script src="EKDatasetLocal.js"></script>
+<!--Local third_party_data-->
+<script src="ThirdPartyData.js"></script>
 
 <script src="client.js"></script>
 </html>
