--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section id="salarySection" class="mainSections">
             <h2>Løn</h2>
             <div id="divløn">
-    <label for ="lønmenu"> </label>
+            <label for ="lønmenu"> </label>
             <select name="løn" id="lønmenu">
                 <option value="gennemsnit"> Gennemsnit</option>
                 <option value="max"> max</option>
@@ -124,6 +124,24 @@
             <p> info</p>
 
         </div>
+        <section id="wellbeingSection" class="mainSections">
+            <h2>Trivsel</h2>
+        
+            <section class="subSections">
+                <canvas id="wellbeingChart1"></canvas>
+                <div>
+                    <p class="sectionText">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita itaque ipsam tenetur deleniti provident? Aliquid eos illo facilis laudantium nobis assumenda id sapiente exercitationem reprehenderit? Vel obcaecati soluta perspiciatis dolorum.
+                    </p>
+                </div>
+            </section>
+            <section id="wellbeingMultisection" class="subSections">
+                <canvas id="wellbeingChart2"></canvas>
+                <canvas id="wellbeingChart3"></canvas>
+                <canvas id="wellbeingChart4"></canvas>
+                <canvas id="wellbeingChart5"></canvas>
+            </section>
+        </section>
         <section id="jobSection" class="mainSections">
             <h2>Jobstart</h2>
     
