Local queries done and all charts has data inserted

--- a/index.html
+++ b/index.html
@@ -151,37 +151,24 @@
                 <canvas id="jobChart1" class="maincharts"></canvas>
                 <div>
                     <p class="sectionText">
+                        En af de ting vi ved godt kan nage en smule er tanken "hvad nu hvis jeg ikke finder et job?". Men du behøver ikke at
+                        være så bekymret! Arbejdsløsheden inde for disse uddannelser ligger helt nede mellem 1-5% for uddannselserne.
+                        <br><br> 
                         En af de helt store skridt efter du har færdiggjordt din uddannelse, er at komme ud på arbejdsmarkedet.
                         Her kan du se hvordan nyuddannede inde for branchen typisk finder deres første job.
                     </p>
                 </div>
             </section>
+            <section id="wellbeingMultisection" class="subSections">
+                <canvas id="jobChart2"></canvas>
+                <canvas id="jobChart3"></canvas>
+                <canvas id="jobChart4"></canvas>
+                <canvas id="jobChart5"></canvas>
+            </section>
             <div id="infortekst5">
                 <p> info</p>
             </div>
         </section>
-
-        </div>
-        <section id="joblessSection" class="mainSections">
-            <h2>Arbejdsløshed</h2>
-    
-            <section class="subSections">
-                <canvas id="jobChart2" class="maincharts"></canvas>
-                <div>
-                    <p class="sectionText">
-                       En af de ting vi ved godt kan nage en smule er tanken "hvad nu hvis jeg ikke finder et job?".
-                       Men du behøver ikke at være så bekymret! Arbejdsløsheden inde for disse uddannelser ligger helt nede mellem 1-5%
-                       for uddannselserne.
-                    </p>
-                </div>
-            </section>
-            <div id="infortekst6">
-                <p> info</p>
-            </div>
-        </section>
-
-
-        </div>
     </main>
 
     <footer>
