--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
         <li>
-            <button ID="Btmtrivsel"><a href="#joblessSection"> Trivsel </a></button>
+            <button ID="Btmtrivsel"><a href="#wellbeingSection"> Trivsel </a></button>
         </li>
 
     </ul>
@@ -46,7 +46,7 @@
         <option value="#genderSection">Kønsfordeling</option>
         <option value="#jobSection">Jobstart</option>
         <option value="#joblessSection">Arbejdsløshed</option>
-        <option value="#trivselSection">Trivsel</option>
+        <option value="#wellbeingSection">Trivsel</option>
     </select>
 
 </nav>
