lavet duo charts og marginer til charts

--- a/index.html
+++ b/index.html
@@ -111,26 +111,8 @@
 
         </div>
         <section class="subSections">
-            <canvas id="genderChart2" class="mainCharts"></canvas>
-            <div>
-                <p class="sectionText">
-                    Lorem ipsum
-                </p>
-            </div>
-        </section>
-        <div class="infotext">
-            <p> info</p>
-        </div>
-        <section class="subSections">
-            <canvas id="genderChart3" class="mainCharts"></canvas>
-            <div>
-                <p class="sectionText">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus voluptas cumque cupiditate aliquid
-                    enim et! Qui
-                    totam
-                    dicta ipsum ad, blanditiis debitis quia maiores earum quos neque voluptatum, laudantium enim.
-                </p>
-            </div>
+            <canvas id="genderChart2" class="duoCharts"></canvas>
+            <canvas id="genderChart3" class="duoCharts"></canvas>
         </section>
         <div class="infotext">
             <p> info</p>
