Chart setting adhustment

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </nav>
 <main>
     <header>
-        <h1 style="display: none;">Kvinder på IT-uddannelser</h1> <!--SEO fokuseret h1-->
+        <h1 >Kvinder på IT-uddannelser</h1> <!--SEO fokuseret h1-->
         <img src="we_need_you.jpg"
              alt="A picture of a techy woman in a hoodie and smart glasses. Pointing at the user. Text on picture reads: We need you, to code the future">
         <p id="introText">
