--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@
 
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> Da ITAK er en ny uddannelse er der ikke tal på løn endnu.
+                <br>
+                Vi har baseret vores tal på en af de mulige stillinger man kan få som færdiguddannet,
+                <br>
+                navnligt IT-projektleder
+            </p>
         </div>
     </section>
 
@@ -107,7 +112,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> </p>
 
         </div>
         <section class="subSections">
@@ -119,7 +124,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> </p>
         </div>
         <section class="subSections">
             <canvas id="genderChart3" class="mainCharts"></canvas>
@@ -133,7 +138,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> </p>
         </div>
     </section>
 
@@ -152,7 +157,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> </p>
         </div>
         <section id="wellbeingMultisection1" class="subSections">
             <canvas id="wellbeingChart2" class="surveyCharts"></canvas>
@@ -183,7 +188,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> </p>
         </div>
         <section id="wellbeingMultisection2" class="subSections">
             <canvas id="jobChart2" class="surveyCharts"></canvas>
@@ -192,7 +197,7 @@
             <canvas id="jobChart5" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
-            <p> info</p>
+            <p> 1232</p>
         </div>
     </section>
 </main>
