--- a/index.html
+++ b/index.html
@@ -197,7 +197,12 @@
             <canvas id="jobChart5" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
-            <p> 1232</p>
+            <p> Da Itak er for ny en uddannelse til at vi har data på den,
+                <br>
+                har vi antaget at jobløseheden ligger på niveau med de andre
+                <br>
+                uddannelser. Det er også derfor "jobstart" er tom for Itak.
+            </p>
         </div>
     </section>
 </main>
