--- a/index.html
+++ b/index.html
@@ -78,16 +78,14 @@
             <canvas id="salaryChart" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Et af de helt store spørgsmål nå man overvejer hvad man gerne vil ift uddannelse er løn.
-                    På diagrammet kan du se hvad de forskellige uddannelser ca. udbetaler som minimum, maksimum og
-                    gennemsnitlig løn.
+                    Et typisk stillet spørgsmål er "hvad får vi i løn?" Brug selectoren til at vise min, maks eller average!
                 </p>
             </div>
 
 
         </section>
         <div class="infotext">
-            <p> Da ITAK er en ny uddannelse er der ikke tal på løn endnu.
+            <p> Da ITAR er en ny uddannelse er der ikke tal på løn endnu.
                 <br>
                 Vi har baseret vores tal på en af de mulige stillinger man kan få som færdiguddannet,
                 <br>
@@ -104,10 +102,9 @@
             <canvas id="genderChart1" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Det kommer ikke som en stor overraskelse at de fleste it-uddannelser er mandsdommineret,
-                    me der er ikke så "slemt" som du måske går og tror. Målet er selvfølgelig at komme så tæt på en
-                    50/50
-                    kønsfordeling som muligt, og med din hjælp kan vi komme tættere på målet!
+                    Vi har en 43/57 kønsfordeling på skolen hvilket er superfedt, <br>
+                    men viste du at hvis vi fjern MEKO fra ligningen er vi nede på <br>
+                    en 17/83 fordeling? Det er derfor vi har brug for dig!
                 </p>
             </div>
         </section>
@@ -132,9 +129,7 @@
             <canvas id="wellbeingChart1" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita itaque ipsam tenetur deleniti
-                    provident? Aliquid eos illo facilis laudantium nobis assumenda id sapiente exercitationem
-                    reprehenderit? Vel obcaecati soluta perspiciatis dolorum.
+                  Vi har en lav frafaldsrate på alle studier, og folk trives generelt super godt hen over alle vores IT-uddannelser.
                 </p>
             </div>
         </section>
@@ -179,11 +174,11 @@
             <canvas id="jobChart5" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
-            <p> Da Itak er for ny en uddannelse til at vi har data på den,
+            <p> Da Itar er for ny en uddannelse til at vi har data på den,
                 <br>
                 har vi antaget at jobløseheden ligger på niveau med de andre
                 <br>
-                uddannelser. Det er også derfor "jobstart" er tom for Itak.
+                uddannelser. Det er også derfor "jobstart" er tom for Itar.
             </p>
         </div>
     </section>
