Chart titles, ITAR*label.

--- a/index.html
+++ b/index.html
@@ -161,11 +161,15 @@
         <div class="infotext">
             <button type="button" class="infoButton" id="jobChart1Info">info</button>
         </div>
+        <div class="secondaryTitle">
+            <h4>Du står stærkt på arbejdsmarkedet uanset hvilken vej du vælger.</h4>
+            <h4>Sådan fik færdiguddannede deres første job:</h4>
+        </div>
         <section id="jobMultisection1" class="subSections">
-            <canvas id="jobChart2" class="surveyCharts"></canvas>
-            <canvas id="jobChart3" class="surveyCharts"></canvas>
-            <canvas id="jobChart4" class="surveyCharts"></canvas>
-            <canvas id="jobChart5" class="surveyCharts"></canvas>
+            <canvas id="jobSurveyQ1" class="surveyCharts"></canvas>
+            <canvas id="jobSurveyQ2" class="surveyCharts"></canvas>
+            <canvas id="jobSurveyQ3" class="surveyCharts"></canvas>
+            <canvas id="jobSurveyQ4" class="surveyCharts"></canvas>
         </section>
         <div class="infotext">
             <button type="button" class="infoButton" id="jobMultisection1Info">info</button>
