switch ved trivsel

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         <option value="#salarySection">Løn</option>
         <option value="#genderSection">Kønsfordeling</option>
         <option value="#jobSection">Jobstart</option>
-
         <option value="#wellbeingSection">Trivsel</option>
     </select>
 
@@ -129,10 +128,33 @@
                 <p class="sectionText">
                   Vi har en lav frafaldsrate på alle studier, og folk trives generelt super godt hen over alle vores IT-uddannelser.
                 </p>
+
+
+
+
+
             </div>
         </section>
         <div class="infotext">
             <p> </p>
+
+
+
+
+
+        </div>
+
+
+        <div id="beggeknapepr">
+            <div id="knap1">
+                <input type="radio" id="kvotient" name="kvotient"  checked>
+                <label for="kvotient">Social</label>
+            </div>
+
+            <div id="knap2">
+                <input type="radio" id="alder" name="kvotient" >
+                <label for="alder">Faglig</label>
+            </div>
         </div>
         <section id="wellbeingMultisection1" class="subSections">
             <canvas id="wellbeingChart2" class="surveyCharts"></canvas>
