--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <ul class="knapperne">
 
         <li>
-            <button ID="Btmløn"><a href="#salarySection"> Løn </a></button>
+            <button ID="Btmløn">Løn </button>
         </li>
 
         <li>
-            <button ID="BtmKønsfordeling"><a href="#genderSection"> Kønsfordeling </a></button>
+            <button ID="BtmKønsfordeling"> Kønsfordeling </button>
         </li>
 
 
         <li>
-            <button ID="BtmJobstart"><a href="#jobSection"> Jobstart </a></button>
+            <button ID="BtmJobstart"> Jobstart </button>
         </li>
 
 
@@ -33,7 +33,7 @@
 
 
         <li>
-            <button ID="Btmtrivsel"><a href="#wellbeingSection"> Trivsel </a></button>
+            <button ID="Btmtrivsel"> Trivsel </button>
         </li>
 
     </ul>
