--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <div class="dropdown">
             <label for="lønmenu"> </label>
             <select name="løn" id="lønmenu">
-                <option value="gennemsnit"> Gennemsnit</option>
-                <option value="max"> max</option>
-                <option value="min"> min</option>
+                <option value="gennemsnit"id="dropdowngen"> Gennemsnit</option>
+                <option value="max" id="dropdownmax"> max</option>
+                <option value="min" id="dropdownmin"> min</option>
             </select>
         </div>
 
