--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>PP6</title>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 </head>
 <body>
 <nav id="navbar">
@@ -16,24 +16,21 @@
     <ul class="knapperne">
 
         <li>
-            <button ID="Btmløn">Løn </button>
+            <button ID="Btmløn">Løn</button>
         </li>
 
         <li>
-            <button ID="BtmKønsfordeling"> Kønsfordeling </button>
+            <button ID="BtmKønsfordeling"> Kønsfordeling</button>
         </li>
 
 
         <li>
-            <button ID="BtmJobstart"> Jobstart </button>
+            <button ID="BtmJobstart"> Jobstart</button>
         </li>
 
 
-
-
-
         <li>
-            <button ID="Btmtrivsel"> Trivsel </button>
+            <button ID="Btmtrivsel"> Trivsel</button>
         </li>
 
     </ul>
@@ -64,7 +61,7 @@
         <div class="dropdown">
             <label for="lønmenu"> </label>
             <select name="løn" id="lønmenu">
-                <option value="gennemsnit"id="dropdowngen"> Gennemsnit</option>
+                <option value="gennemsnit" id="dropdowngen"> Gennemsnit</option>
                 <option value="max" id="dropdownmax"> max</option>
                 <option value="min" id="dropdownmin"> min</option>
             </select>
@@ -75,7 +72,8 @@
             <canvas id="salaryChart" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                    Et typisk stillet spørgsmål er "hvad får vi i løn?" Brug selectoren til at vise min, maks eller average!
+                    Et typisk stillet spørgsmål er "hvad får vi i løn?" Brug selectoren til at vise min, maks eller
+                    average!
                 </p>
             </div>
 
@@ -126,20 +124,15 @@
             <canvas id="wellbeingChart1" class="mainCharts"></canvas>
             <div>
                 <p class="sectionText">
-                  Vi har en lav frafaldsrate på alle studier, og folk trives generelt super godt hen over alle vores IT-uddannelser.
+                    Vi har en lav frafaldsrate på alle studier, og folk trives generelt super godt hen over alle vores
+                    IT-uddannelser.
                 </p>
-
-
-
 
 
             </div>
         </section>
         <div class="infotext">
-            <p> </p>
-
-
-
+            <p></p>
 
 
         </div>
@@ -147,12 +140,12 @@
 
         <div id="beggeknapepr">
             <div id="knap1">
-                <input type="radio" id="kvotient" name="kvotient"  checked>
+                <input type="radio" id="kvotient" name="kvotient" checked>
                 <label for="kvotient">Social</label>
             </div>
 
             <div id="knap2">
-                <input type="radio" id="alder" name="kvotient" >
+                <input type="radio" id="alder" name="kvotient">
                 <label for="alder">Faglig</label>
             </div>
         </div>
@@ -185,7 +178,7 @@
             </div>
         </section>
         <div class="infotext">
-            <p> </p>
+            <p></p>
         </div>
         <section id="wellbeingMultisection2" class="subSections">
             <canvas id="jobChart2" class="surveyCharts"></canvas>
