--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     </ul>
 
-    <select id="mobil-menu" onchange="window.location.href=this.value">
+    <select id="mobil-menu" >
         <option value="" disabled selected>Vælg et emne...</option>
         <option value="#salarySection">Løn</option>
         <option value="#genderSection">Kønsfordeling</option>
